--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,26 +1,24 @@
-.messageConfig {
-    background: skyblue;
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 10px;
-    max-width : 600px;
-    word-wrap : break-word;
-}
-
 .message {
     margin-bottom: 15px;
-    width: fit-content;
     border-radius: 20px;
+    padding: 10px;
+    word-wrap: break-word;
+    width: fit-content;
+    font-weight: 400;
+    font-family: 'Fira Code', monospace;
 }
 .message__user {
     margin-left: auto;
     color: white;
     text-align: left !important;
     background-color: blue !important;
+    text-overflow: clip;
 }
 
-@media screen and (max-width : 500px) {
-    .messageConfig {
-        max-width: 180px;
+@media screen  and (max-width:600px)  {
+    .message {
+        max-width: 200px;
     }
 }
+
+
